package com.MutantBattle.control;

public enum CombatDecision {
    ATTACK,
    DEFEND
}
