package com.MutantBattle.model.Attacks;
import com.MutantBattle.model.IPower;

public class WindBarrier implements IPower {
    private int damage;
    private int level;
    private int energyCost;

    public WindBarrier(int damage, int level, int energyCost) {
        this.damage = damage;
        this.level = level;
        this.energyCost = energyCost;
    }

    @Override
    public int getDamage() {
        return damage;
    }

    @Override
    public int getLevel() {
        return level;
    }

    @Override
    public int getEnergyCost() {
        return energyCost;
    }
}